# metasmc

./: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: Makefile  README.docx  README.html  README.md
include/: cache.h  evindex.h  list.h  rbindex.h  smc.h
lib/: libsmc.la  libsmc.so.0.0.0
src/: Makefile.am  Makefile.in  abundance.c  bit.c  bit.h  cache.c  cache.h  eindex.c  eindex.h  evindex.c  evindex.h  global.c  global.h  list.c  list.h  metaprof.c  mutation.c  mutation.h  rand.c  rand.h  rb.c  rb.h  rbindex.c  rbindex.h  sampler.c  seedms  simulator.c  slab.c  slab.h  smc.c  smc.h  smcmeta.pl  trb.c  tsindex.c  tsindex.h  util.c  util.h
src/mt19937-64/: Makefile  Makefile.am  Makefile.in  libsmc_la-mt19937-64.lo
src/mt19937-64/.deps/: libsmc_la-mt19937-64.Plo
